--- a/CICD/Dockerfile
+++ b/CICD/Dockerfile
@@ -1,17 +1,17 @@
 FROM node:12.18.3 as builder
 
 # Make dir
-RUN mkdir /app
-WORKDIR /app
+RUN mkdir /app/
+WORKDIR /app/
 
 # listen port
 EXPOSE 3000
 
 # Build
-ADD *.json   /app
-ADD ./src    /app
-ADD ./public /app
-RUN ls -l /app
+ADD *.json   /app/
+ADD ./src    /app/
+ADD ./public /app/
+RUN ls -l /app/
 
 RUN npm install
 RUN npm cache clean --force
