--- a/CICD/Dockerfile
+++ b/CICD/Dockerfile
@@ -13,8 +13,8 @@ ADD ./src    /app/
 ADD ./public /app/
 RUN ls -l /app/
 
-RUN npm install
-RUN npm cache clean --force
+# RUN npm install
+# RUN npm cache clean --force
 # RUN ls -al
 # RUN ls -al node_modules/
 ENV PATH /app/node_modules/.bin:$PATH
